--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build_frontend": "npm install --prefix ./client && npm run build --prefix ./client"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "csv-parser": "^2.2.0",
     "csvtojson": "^2.0.8",
@@ -26,6 +26,7 @@
     "osm-discretize": "^1.0.0",
     "plotly.js": "^1.47.3",
     "pug": "2.0.0-beta11",
+    "react-plotly.js": "^2.3.0",
     "tableify": "^1.1.0"
   },
   "devDependencies": {}
