--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dstools": "^0.2.8",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.4",
     "file-system": "^2.2.2",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
