--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "npm install && npm run build_frontend",
-    "build_frontend": "npm install --prefix ./client && npm run build --prefix ./client"
+    "build": "npm install &&  npm install --prefix ./client && npm run build --prefix ./client",
+    "bfe": "npm run build --prefix ./client"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
