--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "jsdom": "^14.0.0",
+    "json-2-csv": "^3.5.3",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "osm-discretize": "^1.0.0",
