--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "npm install &&  npm install --prefix ./client && npm run build --prefix ./client",
+    "build": "npm install &&  npm run dirtyinstall --prefix ./client && npm run build --prefix ./client",
     "bfe": "npm run build --prefix ./client"
   },
   "dependencies": {
