--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "npm install &&  npm run dirtyinstall --prefix ./client && npm run build --prefix ./client",
-    "bfe": "npm run build --prefix ./client"
+    "build": "npm install && npm run create_uploads_dir &&  npm run dirtyinstall --prefix ./client && npm run build --prefix ./client",
+    "bfe": "npm run build --prefix ./client",
+    "create_uploads_dir": "mkdir uploads || true"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
