--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cli-progress": "^2.1.1",
     "cookie-parser": "~1.4.3",
     "csv-parser": "^2.2.0",
     "csvtojson": "^2.0.8",
@@ -28,6 +29,7 @@
     "multer": "^1.4.1",
     "osm-discretize": "^1.0.0",
     "plotly.js": "^1.47.3",
+    "progress": "^2.0.3",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {}
